docker e vinculacao do auth com mongodb
